--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/infra/http/server.ts",
+    "dev": "tsx watch --env-file .env src/infra/http/server.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
   },
