--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,12 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
     "fastify": "^5.3.2",
     "fastify-type-provider-zod": "^4.0.2",
+    "uuidv7": "^1.0.2",
     "zod": "^3.24.3"
   }
 }
