--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "tsx watch --env-file .env src/infra/http/server.ts",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-node": "^11.1.0",
@@ -31,8 +35,10 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
+    "drizzle-orm": "^0.43.1",
     "fastify": "^5.3.2",
     "fastify-type-provider-zod": "^4.0.2",
+    "postgres": "^3.4.5",
     "uuidv7": "^1.0.2",
     "zod": "^3.24.3"
   }
