--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "6",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.1.4",
     "zod": "^3.24.3"
   },
