--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
+    "csv-stringify": "^6.5.2",
     "drizzle-orm": "^0.43.1",
     "fastify": "^5.3.2",
     "fastify-type-provider-zod": "^4.0.2",
