--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/infra/http/server.ts",
+    "build": "tsup src --format esm",
+    "start": "node dist/infra/http/server.mjs",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "db:generate": "drizzle-kit generate",
@@ -26,6 +28,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.6",
     "prettier": "^3.5.3",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
